--- a/itinerario-frontend/package.json
+++ b/itinerario-frontend/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@mui/x-data-grid": "^6.18.4",
+    "@mui/x-date-pickers": "^6.18.4",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "install": "^0.13.0",
     "npm": "^10.2.5",
     "react": "^18.2.0",
