--- a/itinerario-frontend/package.json
+++ b/itinerario-frontend/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.0",
-    "@mui/material": "^5.15.0",
+    "@mui/material": "^5.15.18",
+    "@mui/system": "^5.15.15",
     "@mui/x-data-grid": "^6.18.4",
     "@mui/x-date-pickers": "^6.18.4",
     "axios": "^1.6.2",
